# lobaro-coap

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  PortingGuide.md  README.md  coap.h  coap_debug.c  coap_debug.h  coap_interaction.c  coap_interaction.h  coap_main.c  coap_main.h  coap_mem.c  coap_mem.h  coap_message.c  coap_message.h  coap_observe.c  coap_observe.h  coap_options.c  coap_options.h  coap_resource.c  coap_resource.h  liblobaro_coap.c  liblobaro_coap.h  library.json  library.properties
interface/: coap_if_Endpoint.c  coap_if_Endpoint.h  coap_if_Packet.c  coap_if_Packet.h  coap_if_Socket.c  coap_if_Socket.h  coap_interface.h
interface/_common/: coap_if_Endpoint.c  coap_if_Packet.c  coap_if_Packet.h  coap_if_Socket.c  coap_if_Socket.h  coap_interface.h
interface/debug/: coap_debug.c  coap_debug.h
interface/esp8266/: lobaro-coap_esp8266.c  lobaro-coap_esp8266.h
interface/mem/: coap_mem.c  coap_mem.h
interface/network/: net_Endpoint.h  net_Packet.c  net_Packet.h  net_Socket.c  net_Socket.h
option-types/: coap_option_ETag.c  coap_option_blockwise.c  coap_option_blockwise.h  coap_option_cf.c  coap_option_observe.c  coap_option_observe.h  coap_option_uri.c  coap_option_uri.h
src/: coap.h  coap_interaction.c  coap_interaction.h  coap_main.c  coap_main.h  coap_mem.c  coap_mem.h  coap_message.c  coap_message.h  coap_options.c  coap_options.h  coap_resource.c  coap_resource.h  coap_socket.c  coap_socket.h  diagnostic.c  liblobaro_coap.c  liblobaro_coap.h
src/interface/: coap_interface.h
src/interface/debug/: coap_debug.c  coap_debug.h
src/interface/mem/: coap_mem.c
src/interface/network/: net_Endpoint.c  net_Endpoint.h  net_Packet.c  net_Packet.h  net_Socket.c  net_Socket.h
src/option-types/: coap_option_blockwise.c  coap_option_blockwise.h  coap_option_cf.c  coap_option_cf.h  coap_option_observe.c  coap_option_observe.h  coap_option_uri.c  coap_option_uri.h
test/: CMakeLists.txt  arduino.sh  basic_tests.cpp  cmake.sh  coap_interface.cpp  platformio.sh
test/ArduinoBuildTest/: ArduinoBuildTest.ino  about_res.cpp  about_res.h
zephyr/: CMakeLists.txt  Kconfig  module.yml
